Changelog for Catmandu-MAB2

{{$NEXT}}
 - switch to Dist::Milla 

0.07 2014-06-02
 - transform Fix function to new syntax
 - fix documentation
 - fix .gitignore
 - edit dist.ini

0.06 2014-04-04
 - XML parser should ignore PerlIO layers
 - documentation

0.05 2014-03-01
 - added SRU importer

0.04 2014-01-31
 - better handling of record and (sub)field separators
 - bugfix for MAB2::Writer::Disk
 - added mab2 converter script
 - added test status to README
 - more documentation

0.03 2013-12-18
 - added Parser and Writer for MAB2 Diskette data

0.02 2013-11-22
 - added file encoding
 - added XML declaration and collection handling
 - minor correction of fix
 - added "use warnings;"
 - added Moo to prerequisites
 - added CHANGES file to distribution

0.01 2013-10-01
 - added record separator to test data
 - perltidy
 - removed start() call from build
 - added some modules
 - added Catmandu exporter for MAB2 data
 - added Makefile.pl
 - removed github plugins
 - correction of github URL
 - initial commit 
 